<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <RelativeLayout
        android:id="@+id/relLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/white_border"
        android:elevation="10dp">

        <EditText
            android:id="@+id/input_search"
            android:layout_marginLeft="15dp"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@null"
            android:hint="Enter Address, City or Zip Code"
            android:imeOptions="actionSearch"
            android:textColor="#000"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/ic_magnify"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/input_search"
            android:clickable="true"
            android:onClick="geoLocate"
            android:src="@drawable/ic_magnify" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/descriptionPad"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/white_border"
        android:elevation="10dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="Name"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="350dp"
            android:layout_height="110dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="65dp"
            android:background="@null"
            android:hint="Description"
            android:textColor="#000"
            android:textSize="15sp" />


        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/name"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="220dp"
            android:layout_marginTop="195dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="18dp"
            android:background="@color/decline"
            android:text="cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/description"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="62dp"
            android:layout_marginTop="195dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="18dp"
            android:background="@color/apply"
            android:text="add"
            android:textColor="@color/white" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/descriptionInfoPad"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/white_border"
        android:elevation="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/nameInfo"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="Name"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/descriptionInfo"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="65dp"
            android:background="@null"
            android:hint="Description"
            android:textColor="#000"
            android:textSize="15sp" />


        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/nameInfo"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="135dp"
            android:layout_marginTop="195dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="30dp"
            android:background="@color/decline"
            android:text="delete"
            android:textColor="@color/white" />

    </RelativeLayout>
</RelativeLayout>